--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Tabulate P.L. 94-171 Redistricting Data Summary Files
 Version: 0.1.0
 Authors@R: c(
     person("Cory", "McCartan", email = "cmccartan@g.harvard.edu", role = c("aut", "cre")),
-    person("Christopher T.", "Kenny", email = "christopherkenny@fas.harvard.edu", role = c("aut", "cre")))
+    person("Christopher T.", "Kenny", email = "christopherkenny@fas.harvard.edu", role = "aut"))
 Maintainer: Cory McCartan <cmccartan@g.harvard.edu>
 Description: Tools to process legacy format summary redistricting data files
     produced by the United States Census Bureau pursuant to P.L. 94-171. These
@@ -15,3 +15,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
+URL: https://github.com/CoryMcCartan/PL94171
+BugReports: https://github.com/CoryMcCartan/PL94171/issues
