--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 export(get_baf)
 export(get_blocks)
 export(read_pl)
-importFrom(dplyr,"%>%")
+import(dplyr)
+import(dtplyr)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_match)
 importFrom(vroom,vroom)
