basic select and subset functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,16 @@
 export(get_baf)
 export(get_blocks)
 export(read_pl)
-import(dplyr)
-import(dtplyr)
+export(select_standard_pl)
+export(subset_pl)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,.data)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
+importFrom(purrr,reduce)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_match)
 importFrom(vroom,vroom)
