rework in progress

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,8 @@ Description: Tools to process legacy format summary redistricting data files
 Depends: R (>= 4.0.0)
 Imports: 
     stringr,
-    vroom,
+    readr,
     dplyr,
-    dtplyr,
     tigris,
     sf,
     withr,
