--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(pl_read)
 export(pl_select_standard)
 export(pl_subset)
 export(pl_tidy_shp)
+export(pl_url)
 export(read_pl)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,.data)
@@ -22,3 +23,4 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_match)
+importFrom(stringr,str_sub)
