--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
+importFrom(stringr,str_c)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_match)
 importFrom(stringr,str_sub)
