--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
-URL: https://corymccartan.github.io/PL94171, https://github.com/CoryMcCartan/PL94171
+URL: https://corymccartan.github.io/PL94171/, https://github.com/CoryMcCartan/PL94171/
 BugReports: https://github.com/CoryMcCartan/PL94171/issues
 Config/testthat/edition: 3
 VignetteBuilder: knitr
