download.file -> get

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,10 @@ Imports:
     dplyr (>= 1.0.0),
     tigris,
     sf,
-    withr
+    withr,
+    httr
 Suggests: 
     testthat (>= 3.0.0),
-    httr,
     lifecycle,
     knitr,
     rmarkdown,
