logo and pl_tidy_shp improvements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(pl_crosswalk)
 export(pl_geog_levels)
 export(pl_get_baf)
 export(pl_get_prototype)
+export(pl_get_vtd)
 export(pl_read)
 export(pl_retally)
 export(pl_select_standard)
