--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,3 +33,4 @@ URL: https://corymccartan.github.io/PL94171/, https://github.com/CoryMcCartan/PL
 BugReports: https://github.com/CoryMcCartan/PL94171/issues
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+Language: en-US
