faster crosswalk retally

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,4 +38,5 @@ importFrom(dplyr,ungroup)
 importFrom(stringr,str_c)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_match)
+importFrom(stringr,str_starts)
 importFrom(stringr,str_sub)
