--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PL94171
 Type: Package
 Title: Tabulate P.L. 94-171 Redistricting Data Summary Files
-Version: 1.0.2
+Version: 1.1.0
 Authors@R: c(
     person("Cory", "McCartan", email = "cmccartan@g.harvard.edu", role = c("aut", "cre")),
     person("Christopher T.", "Kenny", email = "christopherkenny@fas.harvard.edu", role = "aut"))
@@ -11,10 +11,11 @@ Description: Tools to process legacy format summary redistricting data files
     files are generally available earlier but are difficult to work with as-is.
 Depends: R (>= 4.0.0)
 Imports: 
+    cli,
     stringr,
     readr,
     dplyr (>= 1.0.0),
-    tigris,
+    tinytiger,
     sf,
     withr,
     httr
@@ -27,11 +28,10 @@ Suggests:
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 Roxygen: list(markdown = TRUE)
-URL: https://corymccartan.github.io/PL94171/,
+URL: https://corymccartan.com/PL94171/,
     https://github.com/CoryMcCartan/PL94171/,
-    http://corymccartan.com/PL94171/
 BugReports: https://github.com/CoryMcCartan/PL94171/issues
 Config/testthat/edition: 3
 VignetteBuilder: knitr
