--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Type: Package
 Title: Tabulate P.L. 94-171 Redistricting Data Summary Files
 Version: 1.1.2
 Authors@R: c(
-    person("Cory", "McCartan", email = "cmccartan@g.harvard.edu", role = c("aut", "cre")),
+    person("Cory", "McCartan", email = "mccartan@psu.edu", role = c("aut", "cre")),
     person("Christopher T.", "Kenny", email = "christopherkenny@fas.harvard.edu", role = "aut"))
-Maintainer: Cory McCartan <cmccartan@g.harvard.edu>
+Maintainer: Cory McCartan <mccartan@psu.edu>
 Description: Tools to process legacy format summary redistricting data files
     produced by the United States Census Bureau pursuant to P.L. 94-171. These
     files are generally available earlier but are difficult to work with as-is.
@@ -28,7 +28,7 @@ Suggests:
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
 URL: https://corymccartan.com/PL94171/,
     https://github.com/CoryMcCartan/PL94171/
